[tool.poetry]
name = "pubmed_paper_fetcher"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with non-academic authors"
authors = ["Jahnavi <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
typer = "^0.12.3"
pandas = "^2.2"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
mypy = "^1.10"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
